@@ -69,6 +69,7 @@ has_kbd_backlight(void)
 	  || (mops->type == MACHINE_MACBOOKPRO_4)
 	  || (mops->type == MACHINE_MACBOOKPRO_5)
 	  || (mops->type == MACHINE_MACBOOKPRO_6)
+	  || (mops->type == MACHINE_MACBOOKPRO_7)
 	  || (mops->type == MACHINE_MACBOOK_5)
 	  || (mops->type == MACHINE_MACBOOKAIR_1)
 	  || (mops->type == MACHINE_MACBOOKAIR_2));
